--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,7 +1,7 @@
 .navbar {
   position: sticky;
   top: 0;
-  z-index: 99990;
+  z-index: 9999;
 
   margin-bottom: 20px;
 
@@ -63,4 +63,5 @@
 
 .link {
   all: unset;
+  font-family: inherit;
 }
